# md-kb-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  TODO.md  config.example.yaml  deploy.sh  docker-compose.yml
.gitea/workflows/: auto-merge.yaml  build.yaml  ci.yml  release.yml
.githooks/: pre-commit
.github/workflows/: arm64-nightly.yml  auto-merge.yml  ci.yml  release.yml
actions/: gitea-reindex.yml  github-reindex.yml
deploy/: .env.example  TROUBLESHOOTING.md  USAGE.md  config.example.yaml  deploy.env.example  deploy.sh
deploy/ci-examples/: gitea-reindex.yml  github-reindex.yml
deploy/templates/: compose-apple-silicon.yml  compose-cpu.yml  compose-nvidia.yml  compose-rocm.yml  compose-vulkan.yml  traefik-labels.yml
docs/: TROUBLESHOOTING.md  USAGE.md  sample-document.md
migrations/: 001_init.sql
scripts/: setup-dev.sh
src/: chunk.rs  config.rs  embed.rs  ingest.rs  main.rs  mcp.rs  qdrant.rs  server.rs  state.rs  validate.rs  webhook.rs
