[package]
name = "md-kb-rag"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }

# MCP server (Streamable HTTP)
rmcp = { version = "1", features = ["transport-streamable-http-server", "server"] }

# Qdrant vector DB (gRPC)
qdrant-client = "1"

# Frontmatter parsing
gray_matter = "0.2"

# Markdown chunking
text-splitter = { version = "0.18", features = ["markdown"] }

# Embeddings API (OpenAI-compatible)
async-openai = "0.27"

# Config
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"

# SQLite state DB
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Glob patterns
globset = "0.4"

# Hashing
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
subtle = "2"

# UUID
uuid = { version = "1", features = ["v5"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Misc
anyhow = "1"
thiserror = "2"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3"
